RESOLVED FIXED268849
Destructuring exception shouldn't crash
https://bugs.webkit.org/show_bug.cgi?id=268849
Summary Destructuring exception shouldn't crash
Keith Miller
Reported 2024-02-06 12:15:47 PST
...
Attachments
Keith Miller
Comment 1 2024-02-06 12:16:14 PST
Keith Miller
Comment 2 2024-02-06 12:48:17 PST
EWS
Comment 3 2024-02-07 06:15:58 PST
Committed 274213@main (5a241c1e2822): <https://commits.webkit.org/274213@main> Reviewed commits have been landed. Closing PR #23948 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.