Cherry-pick 274213@main (5a241c1e2822). https://bugs.webkit.org/show_bug.cgi?id=268849

Destructuring exception shouldn't crash
    https://bugs.webkit.org/show_bug.cgi?id=268849
    rdar://121869296

    Reviewed by Yusuke Suzuki.

    We recently changed how we saved expression info for exceptions, which saved a bunch of memory.
    The new system exposed some places where we were not setting JSTextPositions properly. This
    patch fixes that and adds some asserts that the expression info is initialized. We also now
    return early rather than emit bad expression info if not all parts are initialized in production.
    This means users will see the wrong expression in their stack trace but we won't crash.

    * JSTests/stress/destructuring-class-in-constructor-exception.js: Added.
    (try.C0):
    * Source/JavaScriptCore/bytecompiler/BytecodeGenerator.h:
    (JSC::BytecodeGenerator::emitExpressionInfo):
    * Source/JavaScriptCore/parser/ASTBuilder.h:
    (JSC::ASTBuilder::finishObjectPattern):
    (JSC::ASTBuilder::setExceptionLocation):
    * Source/JavaScriptCore/parser/Parser.cpp:
    (JSC::Parser<LexerType>::parseDestructuringPattern):
    (JSC::Parser<LexerType>::parseForStatement):
    * Source/JavaScriptCore/parser/ParserTokens.h:
    (JSC::JSTextPosition::operator bool const):
    * Source/JavaScriptCore/parser/SyntaxChecker.h:
    (JSC::SyntaxChecker::operatorStackPop):

    Canonical link: https://commits.webkit.org/274213@main

Canonical link: https://commits.webkit.org/266719.368@webkitglib/2.42