JSTests/stress/destructuring-class-in-constructor-exception.js
@@ -1,0 +1,13 @@
+try {
+    class C0 {
+        constructor(a2, a3) {
+            const v4 = this.e;
+            let {...v5} = this;
+            let [...v6] = v4;
+        }
+    }
+    new C0();
+} catch {
+
+}
+
